--- a/glfw_test/glfw_test.vcxproj.filters
+++ b/glfw_test/glfw_test.vcxproj.filters
@@ -17,6 +17,9 @@
     <Filter Include="Resource Files\src\renderer">
       <UniqueIdentifier>{95d1fcb7-a37f-42b9-81c4-0cc85a120647}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\src\core">
+      <UniqueIdentifier>{ae857925-e7fa-4097-859d-d11fc19ce78b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -25,17 +28,11 @@
     <ClCompile Include="src\log.cpp">
       <Filter>Resource Files\src</Filter>
     </ClCompile>
-    <ClCompile Include="src\monitor.cpp">
-      <Filter>Resource Files\src</Filter>
-    </ClCompile>
     <ClCompile Include="src\terminalColor.cpp">
       <Filter>Resource Files\src</Filter>
     </ClCompile>
     <ClCompile Include="application.cpp">
       <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\renderer\window.cpp">
-      <Filter>Resource Files\src\renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\renderer\openGLContext.cpp">
       <Filter>Resource Files\src\renderer</Filter>
@@ -43,12 +40,18 @@
     <ClCompile Include="src\renderer\renderer.cpp">
       <Filter>Resource Files\src\renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\layer.cpp">
+      <Filter>Resource Files\src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\layerStack.cpp">
+      <Filter>Resource Files\src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\window.cpp">
+      <Filter>Resource Files\src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\log.h">
-      <Filter>Resource Files\src</Filter>
-    </ClInclude>
-    <ClInclude Include="src\monitor.h">
       <Filter>Resource Files\src</Filter>
     </ClInclude>
     <ClInclude Include="src\terminalColor.h">
@@ -75,14 +78,26 @@
     <ClInclude Include="src\input\mouseCodes.h">
       <Filter>Resource Files\src\input</Filter>
     </ClInclude>
-    <ClInclude Include="src\renderer\window.h">
-      <Filter>Resource Files\src\renderer</Filter>
-    </ClInclude>
     <ClInclude Include="src\renderer\openGLContext.h">
       <Filter>Resource Files\src\renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\renderer\renderer.h">
       <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\layer.h">
+      <Filter>Resource Files\src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\layerStack.h">
+      <Filter>Resource Files\src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\window.h">
+      <Filter>Resource Files\src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\timer.h">
+      <Filter>Resource Files\src\core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\timestep.h">
+      <Filter>Resource Files\src\core</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
