--- a/engine/imgui.ini
+++ b/engine/imgui.ini
@@ -4,9 +4,11 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=700,46
-Size=550,680
+ViewportPos=802,286
+ViewportId=0xE927CF2F
+Size=1280,499
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Example: Property editor]
 Pos=61,59
@@ -18,7 +20,21 @@ Pos=60,60
 Size=520,600
 Collapsed=0
 
+[Window][Example: Log]
+Pos=394,225
+Size=500,400
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,1024
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
+
+[Docking][Data]
+DockNode  ID=0x00000001 Pos=802,286 Size=1280,499 Selected=0xE87781F4
+DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=86,85 Size=1280,1005 CentralNode=1
 
