--- a/texturemapping/texturemapping.vcxproj
+++ b/texturemapping/texturemapping.vcxproj
@@ -18,49 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="src\core\application.cpp" />
-    <ClCompile Include="src\core\input.cpp" />
-    <ClCompile Include="src\imgui\imGuiLayer.cpp" />
-    <ClCompile Include="src\core\layer.cpp" />
-    <ClCompile Include="src\core\layerStack.cpp" />
-    <ClCompile Include="src\core\log.cpp" />
-    <ClCompile Include="src\math\math.cpp" />
-    <ClCompile Include="src\renderer\openGLContext.cpp" />
-    <ClCompile Include="src\renderer\renderer.cpp" />
-    <ClCompile Include="src\core\terminalColor.cpp" />
-    <ClCompile Include="src\core\window.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="src\core\application.h" />
-    <ClInclude Include="src\core\entryPoint.h" />
-    <ClInclude Include="src\core\input.h" />
-    <ClInclude Include="src\core\keyCodes.h" />
-    <ClInclude Include="src\core\mouseCodes.h" />
-    <ClInclude Include="src\core\timer.h" />
-    <ClInclude Include="src\core\timestep.h" />
-    <ClInclude Include="src\engine.h" />
-    <ClInclude Include="src\event\applicationEvent.h" />
-    <ClInclude Include="src\event\keyEvent.h" />
-    <ClInclude Include="src\event\mouseEvent.h" />
-    <ClInclude Include="src\imgui\imGuiLayer.h" />
-    <ClInclude Include="src\event\event.h" />
-    <ClInclude Include="src\core\layer.h" />
-    <ClInclude Include="src\core\layerStack.h" />
-    <ClInclude Include="src\core\log.h" />
-    <ClInclude Include="src\math\math.h" />
-    <ClInclude Include="src\renderer\openGLContext.h" />
-    <ClInclude Include="src\renderer\renderer.h" />
-    <ClInclude Include="src\terminalColor.h" />
-    <ClInclude Include="src\core\window.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\imgui\imgui.vcxproj">
-      <Project>{620249f6-9d04-4ed3-b388-a3cd63f75789}</Project>
-    </ProjectReference>
-  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{57144731-EA2F-4157-ABF9-A3F773F2A36D}</ProjectGuid>
+    <VCProjectVersion>16.0</VCProjectVersion>
+    <Keyword>Win32Proj</Keyword>
+    <ProjectGuid>{8c749dbe-6336-4ed2-807a-9c20c93422ee}</ProjectGuid>
+    <RootNamespace>texturemapping</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -78,13 +40,13 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -126,8 +88,6 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)vendor\imgui;$(SolutionDir)vendor\glm\glm</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,8 +102,6 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)vendor\imgui;$(SolutionDir)vendor\glm\glm</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -158,14 +116,11 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)vendor\imgui;$(SolutionDir)vendor\glm\glm</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -176,8 +131,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)vendor\imgui;$(SolutionDir)vendor\glm\glm</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -186,6 +140,20 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\exampleLayer.cpp" />
+    <ClCompile Include="src\texturemapping.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\exampleLayer.h" />
+    <ClInclude Include="src\texturemapping.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\engine\engine.vcxproj">
+      <Project>{57144731-ea2f-4157-abf9-a3f773f2a36d}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
