--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -23,6 +23,15 @@
     <Filter Include="Resource Files\src\math">
       <UniqueIdentifier>{fc1e0204-2b35-4491-bbb6-d4481b7b1c8f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\src\scene">
+      <UniqueIdentifier>{21bc7f2d-aac0-483d-aae7-2ae70a1d081c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\vendor">
+      <UniqueIdentifier>{c000e318-de60-4f15-9a8b-cc4ec4aa0b30}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\vendor\stb_image">
+      <UniqueIdentifier>{429a3aa8-4267-4ae4-a252-64de0f2e0306}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\renderer\openGLContext.cpp">
@@ -57,6 +66,63 @@
     </ClCompile>
     <ClCompile Include="src\math\math.cpp">
       <Filter>Resource Files\src\math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\buffer.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\openGLBuffer.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\openGLShader.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\openGLVertexArray.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\orthographicCamera.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\orthographicCameraController.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\openGLRendererAPI.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\renderer2D.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\editorCamera.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\texture.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\openGLTexture.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\core\UUID.cpp">
+      <Filter>Resource Files\src\core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vendor\stb_image\stb_image.cpp">
+      <Filter>Resource Files\vendor\stb_image</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\sceneCamera.cpp">
+      <Filter>Resource Files\src\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\uniformBuffer.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\shader.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\renderCommand.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\vertexArray.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\renderer\openGLUniformBuffer.cpp">
+      <Filter>Resource Files\src\renderer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -122,6 +188,72 @@
     </ClInclude>
     <ClInclude Include="src\engine.h">
       <Filter>Resource Files\src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\buffer.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\buffer.h">
+      <Filter>Resource Files\src\core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\openGLBuffer.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\openGLShader.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\openGLVertexArray.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\orthographicCamera.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\orthographicCameraController.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\openGLRendererAPI.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\renderer2D.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\camera.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\editorCamera.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\texture.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\openGLTexture.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\components.h">
+      <Filter>Resource Files\src\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\UUID.h">
+      <Filter>Resource Files\src\core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vendor\stb_image\stb_image.h">
+      <Filter>Resource Files\vendor\stb_image</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\sceneCamera.h">
+      <Filter>Resource Files\src\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\uniformBuffer.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\shader.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\renderCommand.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\vertexArray.h">
+      <Filter>Resource Files\src\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\renderer\openGLUniformBuffer.h">
+      <Filter>Resource Files\src\renderer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
