--- a/texturemapping/texturemapping.vcxproj.filters
+++ b/texturemapping/texturemapping.vcxproj.filters
@@ -18,13 +18,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\exampleLayer.cpp">
       <Filter>Source Files\src</Filter>
     </ClCompile>
-    <ClCompile Include="src\texturemapping.cpp">
+    <ClCompile Include="src\texturemapping2D.cpp">
+      <Filter>Source Files\src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\texturemappingApp.cpp">
       <Filter>Source Files\src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,7 +32,7 @@
     <ClInclude Include="src\exampleLayer.h">
       <Filter>Source Files\src</Filter>
     </ClInclude>
-    <ClInclude Include="src\texturemapping.h">
+    <ClInclude Include="src\texturemapping2D.h">
       <Filter>Source Files\src</Filter>
     </ClInclude>
   </ItemGroup>
