--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -19,26 +19,48 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\vendor\stb_image\stb_image.cpp" />
     <ClCompile Include="src\core\application.cpp" />
     <ClCompile Include="src\core\input.cpp" />
+    <ClCompile Include="src\core\UUID.cpp" />
     <ClCompile Include="src\imgui\imGuiLayer.cpp" />
     <ClCompile Include="src\core\layer.cpp" />
     <ClCompile Include="src\core\layerStack.cpp" />
     <ClCompile Include="src\core\log.cpp" />
     <ClCompile Include="src\math\math.cpp" />
+    <ClCompile Include="src\renderer\buffer.cpp" />
+    <ClCompile Include="src\renderer\editorCamera.cpp" />
+    <ClCompile Include="src\renderer\openGLBuffer.cpp" />
     <ClCompile Include="src\renderer\openGLContext.cpp" />
+    <ClCompile Include="src\renderer\openGLRendererAPI.cpp" />
+    <ClCompile Include="src\renderer\openGLShader.cpp" />
+    <ClCompile Include="src\renderer\openGLTexture.cpp" />
+    <ClCompile Include="src\renderer\openGLUniformBuffer.cpp" />
+    <ClCompile Include="src\renderer\openGLVertexArray.cpp" />
+    <ClCompile Include="src\renderer\orthographicCamera.cpp" />
+    <ClCompile Include="src\renderer\orthographicCameraController.cpp" />
+    <ClCompile Include="src\renderer\renderCommand.cpp" />
     <ClCompile Include="src\renderer\renderer.cpp" />
     <ClCompile Include="src\core\terminalColor.cpp" />
     <ClCompile Include="src\core\window.cpp" />
+    <ClCompile Include="src\renderer\renderer2D.cpp" />
+    <ClCompile Include="src\renderer\shader.cpp" />
+    <ClCompile Include="src\renderer\texture.cpp" />
+    <ClCompile Include="src\renderer\uniformBuffer.cpp" />
+    <ClCompile Include="src\renderer\vertexArray.cpp" />
+    <ClCompile Include="src\scene\sceneCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\vendor\stb_image\stb_image.h" />
     <ClInclude Include="src\core\application.h" />
+    <ClInclude Include="src\core\buffer.h" />
     <ClInclude Include="src\core\entryPoint.h" />
     <ClInclude Include="src\core\input.h" />
     <ClInclude Include="src\core\keyCodes.h" />
     <ClInclude Include="src\core\mouseCodes.h" />
     <ClInclude Include="src\core\timer.h" />
     <ClInclude Include="src\core\timestep.h" />
+    <ClInclude Include="src\core\UUID.h" />
     <ClInclude Include="src\engine.h" />
     <ClInclude Include="src\event\applicationEvent.h" />
     <ClInclude Include="src\event\keyEvent.h" />
@@ -49,8 +71,27 @@
     <ClInclude Include="src\core\layerStack.h" />
     <ClInclude Include="src\core\log.h" />
     <ClInclude Include="src\math\math.h" />
+    <ClInclude Include="src\renderer\buffer.h" />
+    <ClInclude Include="src\renderer\camera.h" />
+    <ClInclude Include="src\renderer\editorCamera.h" />
+    <ClInclude Include="src\renderer\openGLBuffer.h" />
     <ClInclude Include="src\renderer\openGLContext.h" />
+    <ClInclude Include="src\renderer\openGLRendererAPI.h" />
+    <ClInclude Include="src\renderer\openGLShader.h" />
+    <ClInclude Include="src\renderer\openGLTexture.h" />
+    <ClInclude Include="src\renderer\openGLUniformBuffer.h" />
+    <ClInclude Include="src\renderer\openGLVertexArray.h" />
+    <ClInclude Include="src\renderer\orthographicCamera.h" />
+    <ClInclude Include="src\renderer\orthographicCameraController.h" />
+    <ClInclude Include="src\renderer\renderCommand.h" />
     <ClInclude Include="src\renderer\renderer.h" />
+    <ClInclude Include="src\renderer\renderer2D.h" />
+    <ClInclude Include="src\renderer\shader.h" />
+    <ClInclude Include="src\renderer\texture.h" />
+    <ClInclude Include="src\renderer\uniformBuffer.h" />
+    <ClInclude Include="src\renderer\vertexArray.h" />
+    <ClInclude Include="src\scene\components.h" />
+    <ClInclude Include="src\scene\sceneCamera.h" />
     <ClInclude Include="src\terminalColor.h" />
     <ClInclude Include="src\core\window.h" />
   </ItemGroup>
@@ -62,6 +103,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{57144731-EA2F-4157-ABF9-A3F773F2A36D}</ProjectGuid>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Engine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -158,7 +200,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)vendor\imgui;$(SolutionDir)vendor\glm\glm</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\imgui;$(SolutionDir)vendor\glm\glm</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -176,7 +218,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)vendor\imgui;$(SolutionDir)vendor\glm\glm</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)engine\src;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\imgui;$(SolutionDir)vendor\glm\glm</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
