--- a/texturemapping/imgui.ini
+++ b/texturemapping/imgui.ini
@@ -9,5 +9,11 @@ ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=0
 
+[Window][Settings]
+ViewportPos=3723,236
+ViewportId=0x1C33C293
+Size=427,255
+Collapsed=0
+
 [Docking][Data]
 
