--- a/texturemapping/imgui.ini
+++ b/texturemapping/imgui.ini
@@ -10,8 +10,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=3723,236
-ViewportId=0x1C33C293
+Pos=240,147
 Size=427,255
 Collapsed=0
 
