--- a/texturemapping/imgui.ini
+++ b/texturemapping/imgui.ini
@@ -10,7 +10,8 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=240,147
+ViewportPos=-408,-19
+ViewportId=0x1C33C293
 Size=427,255
 Collapsed=0
 
