--- a/texturemapping/texturemapping.vcxproj
+++ b/texturemapping/texturemapping.vcxproj
@@ -123,6 +123,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>D:\git\OpenGL-Renderengine-with-ImGui\vendor\assimp\win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>assimp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -141,16 +143,16 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>D:\git\OpenGL-Renderengine-with-ImGui\vendor\assimp\win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>assimp.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\exampleLayer.cpp" />
-    <ClCompile Include="src\texturemapping2D.cpp" />
     <ClCompile Include="src\texturemappingApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\exampleLayer.h" />
-    <ClInclude Include="src\texturemapping2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\engine\engine.vcxproj">
