--- a/texturemapping/imgui.ini
+++ b/texturemapping/imgui.ini
@@ -10,8 +10,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=-408,-19
-ViewportId=0x1C33C293
+Pos=1131,282
 Size=427,255
 Collapsed=0
 
