--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="src\renderer\buffer.cpp" />
     <ClCompile Include="src\renderer\camera.cpp" />
     <ClCompile Include="src\renderer\mesh.cpp" />
+    <ClCompile Include="src\renderer\model.cpp" />
     <ClCompile Include="src\renderer\openGLBuffer.cpp" />
     <ClCompile Include="src\renderer\openGLContext.cpp" />
     <ClCompile Include="src\renderer\openGLRenderer.cpp" />
@@ -71,6 +72,7 @@
     <ClInclude Include="src\renderer\buffer.h" />
     <ClInclude Include="src\renderer\camera.h" />
     <ClInclude Include="src\renderer\mesh.h" />
+    <ClInclude Include="src\renderer\model.h" />
     <ClInclude Include="src\renderer\openGLBuffer.h" />
     <ClInclude Include="src\renderer\openGLContext.h" />
     <ClInclude Include="src\renderer\openGLRenderer.h" />
